# datapains-vanna

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
src/: process.py
src/auth/: trino_auth.py
src/models/: google_gemini_chat_config.py
src/operators/: trino_execution.py  vanna_ai.py
src/train/: model.py
tools/scripts/: comment_tables.sh  create_tables.sh  insert_data.sh  test_sql.sh  trino_shell.sh
