[project]
name = "datapains-vanna"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "kaleido==0.2.1",
    "vanna==0.7.9",
    "chromadb==1.0.4",
    "trino==0.333.0",
    "vertexai==1.71.1",
    "google-generativeai==0.8.4",
    "pyhive==0.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5"
]
